--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@nextui-org/link": "2.0.35",
 		"@nextui-org/listbox": "2.1.27",
 		"@nextui-org/navbar": "2.0.37",
+		"@nextui-org/react": "^2.4.8",
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "2.2.6",
@@ -24,6 +25,7 @@
 		"@react-aria/visually-hidden": "3.8.12",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
+		"hugeicons-react": "^0.3.0",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
