--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"framer-motion": "~11.1.1",
 		"hugeicons-react": "^0.3.0",
 		"intl-messageformat": "^10.5.0",
+		"lucide-react": "^0.453.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
