--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
-		"clsx": "2.1.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"framer-motion": "~11.1.1",
 		"hugeicons-react": "^0.3.0",
 		"intl-messageformat": "^10.5.0",
@@ -32,9 +33,12 @@
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-icons": "^5.3.0"
+		"react-icons": "^5.3.0",
+		"tailwind-merge": "^2.5.5",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@shadcn/ui": "^0.0.4",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
