--- a/package.json
+++ b/package.json
@@ -28,17 +28,20 @@
 		"framer-motion": "~11.1.1",
 		"hugeicons-react": "^0.3.0",
 		"intl-messageformat": "^10.5.0",
+		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.453.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-icons": "^5.3.0",
+		"sonner": "^1.7.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@shadcn/ui": "^0.0.4",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
